--- a/gb/21/4/20/n12893665.md
+++ b/gb/21/4/20/n12893665.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nnmtsc3385/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nnmtsc3385/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nnmtsc3385/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉：长征是逃亡而非抗日 飞夺泸定桥属虚构</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2021年04月21日讯<strong>】</strong>在中共百集洗脑微纪录片《百炼成钢：中国共产党的100年》第十五集《大会师》的开篇，从1975年病重的周恩来让邓颖超找来《<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E9%95%BF%E5%BE%81.md#1">长征</a>组歌》陪伴自己度过最后时光，引出“长征”，进而提到<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E9%A3%9E%E5%A4%BA%E6%B3%B8%E5%AE%9A%E6%A1%A5.md#1">飞夺泸定桥</a>、攻占泸定城、抢渡大渡河、过雪山等所谓“英勇”经历，并大言不惭地说长征的胜利，“实现了中国共产党北上抗日的战略方针，推动了抗日民族统一战线的形成，开创了中国革命的新局面”。</p>
-<p>无疑，上述所言又是中共无耻的谎言。让了解<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E9%95%BF%E5%BE%81.md#1">长征</a>和中共黑幕的周恩来怀念长征，简直让人笑掉大牙，笔者更乐意相信周在病床上怀念的是茅台酒。有资料称，红军长征时期，路过遵义茅台镇时，周恩来曾用超过1两的杯子喝下了25杯茅台酒。当年是否真有此事，笔者不敢确定，但周喜爱茅台酒却是不争的事实。曾任中共外交部第一副部长等职务的张闻天的遗孀刘英曾在《炎黄春秋》杂志上披露，在外交宴请方面，周恩来讲气派，要吃得好，要吃鱼翅海参，每次宴会都要上茅台。</p>
+	<p>【大纪元2021年04月21日讯<strong>】</strong>在中共百集洗脑微纪录片《百炼成钢：中国共产党的100年》第十五集《大会师》的开篇，从1975年病重的周恩来让邓颖超找来《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%95%BF%E5%BE%81.md#1">长征</a>组歌》陪伴自己度过最后时光，引出“长征”，进而提到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A3%9E%E5%A4%BA%E6%B3%B8%E5%AE%9A%E6%A1%A5.md#1">飞夺泸定桥</a>、攻占泸定城、抢渡大渡河、过雪山等所谓“英勇”经历，并大言不惭地说长征的胜利，“实现了中国共产党北上抗日的战略方针，推动了抗日民族统一战线的形成，开创了中国革命的新局面”。</p>
+<p>无疑，上述所言又是中共无耻的谎言。让了解<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%95%BF%E5%BE%81.md#1">长征</a>和中共黑幕的周恩来怀念长征，简直让人笑掉大牙，笔者更乐意相信周在病床上怀念的是茅台酒。有资料称，红军长征时期，路过遵义茅台镇时，周恩来曾用超过1两的杯子喝下了25杯茅台酒。当年是否真有此事，笔者不敢确定，但周喜爱茅台酒却是不争的事实。曾任中共外交部第一副部长等职务的张闻天的遗孀刘英曾在《炎黄春秋》杂志上披露，在外交宴请方面，周恩来讲气派，要吃得好，要吃鱼翅海参，每次宴会都要上茅台。</p>
 <p>至于长征，绝非中共所言的是“一次战略大转移，是为了北上抗日”，而是在国民党的围剿下的北上逃跑（参见《中共长征逃亡前的大屠杀与遵义会议真相》）。要知道，日军在东北，而中共红军却往南往西北逃窜，这是抗日应有的姿态吗？骗谁呢？这是中共在长征问题上撒的第一个大谎。</p>
 <p>除此以外，关于长征，中共还撒了哪些谎言呢？让我们继续往下扒。</p>
 <p>第二个大谎是，在整个长征过程中，中共在言辞和行动上根本没有提到过抗日，其主要目地仅仅是为了生存。</p>
@@ -36,7 +36,7 @@
 <p>第六个谎言是中共一直宣传说，毛泽东、周恩来等领导人跟红军战士同甘共苦，一起爬雪山过草地。但《毛泽东——鲜为人知的故事》中披露，毛泽东、张闻天、王稼祥在长征开始形成了反对李德、博古领导的“三人集团” ，他们常常躺在担架上商议谋划怎样夺取党政军大权。换言之，在艰难的长征中，他们大都被人抬着走。毛甚至设计了自己的旅行工具。</p>
 <p>毛后来对他身边的工作人员说，他长征中“坐在担架上，做什么？ 我看书，看了不少书。”也有民众在网络上揭露，周恩来也是坐着担架长征的。毛、周等人坐的舒服，但对抬担架的人来说日子却很难过。长征过来的人说：“爬山的时候担架员们只能用膝盖跪行，有时直到膝盖跪烂，……才能爬到山顶。爬完一座山，洒下一路血与汗。”</p>
 <p>一位参加长征的老兵在六十多年后说起来还气得胸脯起伏：“他们说是说平等，自己坐担架，地主作风。”</p>
-<p>第七个谎言是<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E9%A3%9E%E5%A4%BA%E6%B3%B8%E5%AE%9A%E6%A1%A5.md#1">飞夺泸定桥</a>实属虚构。被中共广为宣传的飞夺泸定桥，还入选了小学课本。然而，《毛泽东：鲜为人知的故事》一书披露，基于国民党军队的大量来往电报、部署可以看出，在泸定桥根本没有战斗，因为没有国民党军队把守。过桥时中共红军没有一人伤亡。首批过桥的22名战士，每人得了一套列宁装、一支钢笔、一个碗和二双筷子。他们中没有一个人受伤，其他红军过桥时也没有伤亡。</p>
+<p>第七个谎言是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A3%9E%E5%A4%BA%E6%B3%B8%E5%AE%9A%E6%A1%A5.md#1">飞夺泸定桥</a>实属虚构。被中共广为宣传的飞夺泸定桥，还入选了小学课本。然而，《毛泽东：鲜为人知的故事》一书披露，基于国民党军队的大量来往电报、部署可以看出，在泸定桥根本没有战斗，因为没有国民党军队把守。过桥时中共红军没有一人伤亡。首批过桥的22名战士，每人得了一套列宁装、一支钢笔、一个碗和二双筷子。他们中没有一个人受伤，其他红军过桥时也没有伤亡。</p>
 <p>而邓小平在1982年对美国总统卡特的国家安全顾问布列津斯基亲口承认：“（飞夺泸定桥）这只是为了宣传，我们需要表现我们军队的战斗精神。”</p>
 <p>一个长征，就有那么多让人惊讶的史实。长征这个在中共历史上被重复了一千次、一万次的谎言，什么时候会被彻底还原呢？</p>
 <p>责任编辑：莆山</p>
@@ -45,41 +45,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/6/10/19/n1491989.md#1">张戎：“飞夺泸定桥”是虚构</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/11/1/31/n3158570.md#1">唐子：没有飞夺泸定桥，没有长征</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/7/6/n9362692.md#1">【秘档】红军“飞夺泸定桥”纯属虚构</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/3/14/n12810247.md#1">袁斌：“红军飞夺泸定桥”不过是个荒唐的骗局</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/6/10/19/n1491989.md#1">张戎：“飞夺泸定桥”是虚构</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/1/31/n3158570.md#1">唐子：没有飞夺泸定桥，没有长征</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/7/6/n9362692.md#1">【秘档】红军“飞夺泸定桥”纯属虚构</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/3/14/n12810247.md#1">袁斌：“红军飞夺泸定桥”不过是个荒唐的骗局</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010874.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/15/n12882802.md#1">【未解之谜】三星堆文明究竟源自哪里？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/3/3/n12785986.md#1">【命理】为何三年前后看相结果大不同？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/2/26/n12777808.md#1">《三国演义》中的高人：神卜、神医和隐士</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/13/n12877592.md#1">【未解之谜】希尔夫妇被外星人绑架的惊悚经历</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/16/n12885150.md#1">【未解之谜】报恩的白牛 印度男孩五次转生</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12891289.md#1">【远见快评】中共回应突降调 美日舰围观辽宁号</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12891330.md#1">【新闻看点】美日舍5G抢攻6G 联澳建海底电缆</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12890784.md#1">【探索时分】二战德国七大名将绰号</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888141.md#1">温家宝发文疑讽当局遭微信禁 专家：政局诡谲</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888818.md#1">权斗再起 中共体制内批战狼外交等习政策</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888724.md#1">加密货币集体闪崩 比特币暴跌 近50万人爆仓</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12889946.md#1">澎恰恰欠2亿债 吴申梅愿借钱度难关</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/17/n12887210.md#1">那英《浪姐2》总决赛夺冠 陷假唱疑云登热搜</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/20/n12891489.md#1">新剧演少女体形遭酸 刘涛直播卸妆引热议</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887909.md#1">黄秋生又来台接受隔离 申请就业金卡已获准</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888429.md#1">赵丽颖台上不慎掉耳环 救场四步骤获赞超专业</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/16/n12884330.md#1">厨房台面更换 人造石还是天然石台面好？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/11/n12872973.md#1">灭活疫苗存两风险？中国疫苗三大问题解析</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12890260.md#1">意大利面大厨：避免几个常见错误 煮面更好吃</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12889678.md#1">美国农夫说 鸡蛋要这样摆放才能保持新鲜</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887558.md#1">研究：东亚人或源自台湾 可追溯至5000年前</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nnmtsc3385/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nnmtsc3385/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/20/n12893665.htm">周晓辉：长征是逃亡而非抗日 飞夺泸定桥属虚构</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/20/n12893665.htm">周晓辉：长征是逃亡而非抗日 飞夺泸定桥属虚构</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/20/n12893665.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nnmtsc3385/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nnmtsc3385/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/4/20/n12893665.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
